2019-1/230/users/4023/executions/1682_1103.log
== TEST (2019-04-21 18:10:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num=float(input("Digite um numero: "))
a=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: ))
b=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: ))				  

if (b > a):
	if (num >=a) and (x <=b):
		print(num, "pertence ao intervalo", a, ",",b)
	else:
		print(nume, "nao pertence ao intervalo",a,",",b)
else:
	print("Entradas", a,"e",b,"invalidas")
-- ERROR:
File "XXXX", line 5
    a=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: ))
                                                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 18:12:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num=float(input("Digite um numero: "))
a=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: " ))
b=float(input("Digite o valor de 'b' referente ao intervalo fechado [a,b]: " ))				  

if (b > a):
	if (num >=a) and (x <=b):
		print(num, "pertence ao intervalo", a, ",",b)
	else:
		print(nume, "nao pertence ao intervalo",a,",",b)
else:
	print("Entradas", a,"e",b,"invalidas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(nume, "nao pertence ao intervalo",a,",",b)
NameError: name 'nume' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 18:12:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num=float(input("Digite um numero: "))
a=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: " ))
b=float(input("Digite o valor de 'b' referente ao intervalo fechado [a,b]: " ))				  

if (b > a):
	if (num >=a) and (num <=b):
		print(num, "pertence ao intervalo", a, ",",b)
	else:
		print(nume, "nao pertence ao intervalo",a,",",b)
else:
	print("Entradas", a,"e",b,"invalidas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(nume, "nao pertence ao intervalo",a,",",b)
NameError: name 'nume' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-21 18:12:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num=float(input("Digite um numero: "))
a=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: " ))
b=float(input("Digite o valor de 'b' referente ao intervalo fechado [a,b]: " ))				  

if (b > a):
	if (num >=a) and (num <=b):
		print(num, "pertence ao intervalo", a, ",",b)
	else:
		print(nume, "nao pertence ao intervalo",a,",",b)
else:
	print("Entradas", a,"e",b,"invalidas")
-- EXECUTION TIME:
0.126002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1682/1103/main.py", line 12, in <module>
    print(nume, "nao pertence ao intervalo",a,",",b)
NameError: name 'nume' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:52:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num=float(input("Digite um numero: "))
a=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: " ))
b=float(input("Digite o valor de 'b' referente ao intervalo fechado [a,b]: " ))				  

if (b > a):
	if (num >=a) and (num <=b):
		print(num, "pertence ao intervalo", a, ",",b)
	else:
		print(nume, "nao pertence ao intervalo",a,",",b)
else:
	print("Entradas", a,"e",b,"invalidas")
-- EXECUTION TIME:
0.152337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1682/1103/main.py", line 12, in <module>
    print(nume, "nao pertence ao intervalo",a,",",b)
NameError: name 'nume' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 19:47:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num=float(input("Digite um numero: "))
a=float(input("Digite o valor de 'a' referente ao intervalo fechado [a,b]: " ))
b=float(input("Digite o valor de 'b' referente ao intervalo fechado [a,b]: " ))				  

if (b > a):
	if (num >=a) and (num <=b):
		print(num, "pertence ao intervalo", a, ",",b)
	else:
		print(num, "nao pertence ao intervalo",a,",",b)
else:
	print("Entradas", a,"e",b,"invalidas")
-- EXECUTION TIME:
0.160433
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
